Revert "Fix gap at top of page gradient"
This reverts commit b16faeda308cd3502ead837174101dd39e578b09.

--- a/aiarena/frontend/static/style.css
+++ b/aiarena/frontend/static/style.css
@@ -47,7 +47,7 @@ ul.pagination a {
 }
 
 body {
-    margin: 0 0 25px 0;
+    margin-bottom: 25px;
     padding: 0;
     background-color: rgb(0, 4, 1);
     background-image: url("/static/img/background.gif");
